2012-02-21  Junichi Satoh  <junichi@rworks.jp>

	* mobile/operation/agents/view_alerts.php: Merged from trunk. Fixed
	sql query error.

2012-02-20  Junichi Satoh  <junichi@rworks.jp>
	
	* mobile/index.php: Merged from trunk. Fixed i18n translation does not
	work with mobile console.
	
	* mobile/operation/agents/view_agents.php: Merged from trunk. Fixed
	graph generation failure.

2012-02-16  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events.php: Fixed disable alerts in 
	event validation when choose more than one event to validate
	Merged from trunk

2012-02-16  Sergio Martin <sergio.martin@artica.es>

	* godmode/alerts/alert_list.builder.php: Fixed creation alerts 
	modules combo where appears all the modules (not init included)
	Merged from trunk

2012-02-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions.php: fixed function "check_refererer" when the http
	server run in other port instead the normally 80 port.
	
	Fixes: #3452474
	
	Merged bugfix from trunk.

2012-02-14  Sancho Lerena <slerena@artica.es>

	* include/config_process.php: updated build & version.

	* operation/search_agents.php: Fixed bug: icon to manage agent

	* operation/search_results.php: Fixed bug: search with blank spaces,
	again another HTML entity problem :(

2012-02-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php
	include/functions_visual_map.php: Fixed little
	graphs into the visual maps of the widgets 
	(min height control added)
	Merged from trunk

2012-02-14  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk. Added
	get_all_alert_templates function to API.

2012-02-14  Koichiro Kikuchi  <koichiro@rworks.jp>

	* include/javascript/pandora_alerts.js: Removed double quotes which encolse
	  substituted field[1-3] from command preview.  pandora_server doesn't add
	  double quotes to enclose these fields.
	  Merged from trunk
